fixed stylign on smaller devices

--- a/src/components/Player.css
+++ b/src/components/Player.css
@@ -1,6 +1,6 @@
 .player-container {
   width: 100%;
-  padding: 50px 0px;
+  padding: 20px 0px;
   position: absolute;
   bottom: 0;
   display: flex;
